c-compiler/c.output
State 374 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | OPENPAREN_OP expression CLOSEPAREN_OP

    5 postfix_expression: primary_expression
    6                   | postfix_expression OPENBRACE_OP expression CLOSEBRACE_OP
    7                   | postfix_expression OPENPAREN_OP CLOSEPAREN_OP
    8                   | postfix_expression OPENPAREN_OP argument_expression_list CLOSEPAREN_OP
    9                   | postfix_expression PERIOD_OP IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP
   13                   | OPENPAREN_OP type_name CLOSEPAREN_OP OCURLY_OP initializer_list CCURLY_OP
   14                   | OPENPAREN_OP type_name CLOSEPAREN_OP OCURLY_OP initializer_list COMMA_OP CCURLY_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list COMMA_OP assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF OPENPAREN_OP type_name CLOSEPAREN_OP

   23 unary_operator: BIT_AND
   24               | TIMES_OP
   25               | PLUS_OP
   26               | MINUS_OP
   27               | TILDE_OP
   28               | NOT_OP

   29 cast_expression: unary_expression
   30                | OPENPAREN_OP type_name CLOSEPAREN_OP cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression TIMES_OP cast_expression
   33                          | multiplicative_expression DIV_OP cast_expression
   34                          | multiplicative_expression MOD_OP cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression PLUS_OP multiplicative_expression
   37                    | additive_expression MINUS_OP multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression LESS_OP shift_expression
   43                      | relational_expression GREATER_OP shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression BIT_AND equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression XOR_OP and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression BIT_OR exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression QUESTION_OP expression COLON_OP conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: EQUAL_OP
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression COMMA_OP assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers SEMI_OP
   78            | declaration_specifiers init_declarator_list SEMI_OP

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers
   85                       | function_specifier
   86                       | function_specifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list COMMA_OP init_declarator

   89 init_declarator: declarator
   90                | declarator EQUAL_OP initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | LONGLONG
  102               | FLOAT
  103               | DOUBLE
  104               | SIGNED
  105               | UNSIGNED
  106               | BOOL
  107               | COMPLEX
  108               | IMAGINARY
  109               | struct_or_union_specifier
  110               | enum_specifier
  111               | TYPE_NAME

  112 struct_or_union_specifier: struct_or_union IDENTIFIER OCURLY_OP struct_declaration_list CCURLY_OP
  113                          | struct_or_union OCURLY_OP struct_declaration_list CCURLY_OP
  114                          | struct_or_union IDENTIFIER

  115 struct_or_union: STRUCT
  116                | UNION

  117 struct_declaration_list: struct_declaration
  118                        | struct_declaration_list struct_declaration

  119 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI_OP

  120 specifier_qualifier_list: type_specifier specifier_qualifier_list
  121                         | type_specifier
  122                         | type_qualifier specifier_qualifier_list
  123                         | type_qualifier

  124 struct_declarator_list: struct_declarator
  125                       | struct_declarator_list COMMA_OP struct_declarator

  126 struct_declarator: declarator
  127                  | COLON_OP constant_expression
  128                  | declarator COLON_OP constant_expression

  129 enum_specifier: ENUM OCURLY_OP enumerator_list CCURLY_OP
  130               | ENUM IDENTIFIER OCURLY_OP enumerator_list CCURLY_OP
  131               | ENUM OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  132               | ENUM IDENTIFIER OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  133               | ENUM IDENTIFIER

  134 enumerator_list: enumerator
  135                | enumerator_list COMMA_OP enumerator

  136 enumerator: IDENTIFIER
  137           | IDENTIFIER EQUAL_OP constant_expression

  138 type_qualifier: CONST
  139               | RESTRICT
  140               | VOLATILE

  141 function_specifier: INLINE

  142 declarator: pointer direct_declarator
  143           | direct_declarator

  144 direct_declarator: IDENTIFIER
  145                  | OPENPAREN_OP declarator CLOSEPAREN_OP
  146                  | direct_declarator OPENBRACE_OP type_qualifier_list assignment_expression CLOSEBRACE_OP
  147                  | direct_declarator OPENBRACE_OP type_qualifier_list CLOSEBRACE_OP
  148                  | direct_declarator OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  149                  | direct_declarator OPENBRACE_OP STATIC type_qualifier_list assignment_expression CLOSEBRACE_OP
  150                  | direct_declarator OPENBRACE_OP type_qualifier_list STATIC assignment_expression CLOSEBRACE_OP
  151                  | direct_declarator OPENBRACE_OP type_qualifier_list TIMES_OP CLOSEBRACE_OP
  152                  | direct_declarator OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  153                  | direct_declarator OPENBRACE_OP CLOSEBRACE_OP
  154                  | direct_declarator OPENPAREN_OP parameter_type_list CLOSEPAREN_OP
  155                  | direct_declarator OPENPAREN_OP identifier_list CLOSEPAREN_OP
  156                  | direct_declarator OPENPAREN_OP CLOSEPAREN_OP

  157 pointer: TIMES_OP
  158        | TIMES_OP type_qualifier_list
  159        | TIMES_OP pointer
  160        | TIMES_OP type_qualifier_list pointer

  161 type_qualifier_list: type_qualifier
  162                    | type_qualifier_list type_qualifier

  163 parameter_type_list: parameter_list
  164                    | parameter_list COMMA_OP ELLIPSIS

  165 parameter_list: parameter_declaration
  166               | parameter_list COMMA_OP parameter_declaration

  167 parameter_declaration: declaration_specifiers declarator
  168                      | declaration_specifiers abstract_declarator
  169                      | declaration_specifiers

  170 identifier_list: IDENTIFIER
  171                | identifier_list COMMA_OP IDENTIFIER

  172 type_name: specifier_qualifier_list
  173          | specifier_qualifier_list abstract_declarator

  174 abstract_declarator: pointer
  175                    | direct_abstract_declarator
  176                    | pointer direct_abstract_declarator

  177 direct_abstract_declarator: OPENPAREN_OP abstract_declarator CLOSEPAREN_OP
  178                           | OPENBRACE_OP CLOSEBRACE_OP
  179                           | OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  180                           | direct_abstract_declarator OPENBRACE_OP CLOSEBRACE_OP
  181                           | direct_abstract_declarator OPENBRACE_OP assignment_expression CLOSEBRACE_OP
  182                           | OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  183                           | direct_abstract_declarator OPENBRACE_OP TIMES_OP CLOSEBRACE_OP
  184                           | OPENPAREN_OP CLOSEPAREN_OP
  185                           | OPENPAREN_OP parameter_type_list CLOSEPAREN_OP
  186                           | direct_abstract_declarator OPENPAREN_OP CLOSEPAREN_OP
  187                           | direct_abstract_declarator OPENPAREN_OP parameter_type_list CLOSEPAREN_OP

  188 initializer: assignment_expression
  189            | OCURLY_OP initializer_list CCURLY_OP
  190            | OCURLY_OP initializer_list COMMA_OP CCURLY_OP

  191 initializer_list: initializer
  192                 | designation initializer
  193                 | initializer_list COMMA_OP initializer
  194                 | initializer_list COMMA_OP designation initializer

  195 designation: designator_list EQUAL_OP

  196 designator_list: designator
  197                | designator_list designator

  198 designator: OPENBRACE_OP constant_expression CLOSEBRACE_OP
  199           | PERIOD_OP IDENTIFIER

  200 statement: labeled_statement
  201          | compound_statement
  202          | expression_statement
  203          | selection_statement
  204          | iteration_statement
  205          | jump_statement

  206 labeled_statement: IDENTIFIER COLON_OP statement
  207                  | CASE constant_expression COLON_OP statement
  208                  | DEFAULT COLON_OP statement

  209 compound_statement: OCURLY_OP CCURLY_OP
  210                   | OCURLY_OP block_item_list CCURLY_OP

  211 block_item_list: block_item
  212                | block_item_list block_item

  213 block_item: declaration
  214           | statement

  215 expression_statement: SEMI_OP
  216                     | expression SEMI_OP

  217 selection_statement: IF OPENPAREN_OP expression CLOSEPAREN_OP statement
  218                    | IF OPENPAREN_OP expression CLOSEPAREN_OP statement ELSE statement
  219                    | SWITCH OPENPAREN_OP expression CLOSEPAREN_OP statement

  220 iteration_statement: WHILE OPENPAREN_OP expression CLOSEPAREN_OP statement
  221                    | DO statement WHILE OPENPAREN_OP expression CLOSEPAREN_OP SEMI_OP
  222                    | FOR OPENPAREN_OP expression_statement expression_statement CLOSEPAREN_OP statement
  223                    | FOR OPENPAREN_OP expression_statement expression_statement expression CLOSEPAREN_OP statement
  224                    | FOR OPENPAREN_OP declaration expression_statement CLOSEPAREN_OP statement
  225                    | FOR OPENPAREN_OP declaration expression_statement expression CLOSEPAREN_OP statement

  226 jump_statement: GOTO IDENTIFIER SEMI_OP
  227               | CONTINUE SEMI_OP
  228               | BREAK SEMI_OP
  229               | RETURN SEMI_OP
  230               | RETURN expression SEMI_OP

  231 translation_unit: external_declaration
  232                 | translation_unit external_declaration

  233 external_declaration: function_definition
  234                     | declaration

  235 function_definition: declaration_specifiers declarator declaration_list compound_statement
  236                    | declaration_specifiers declarator compound_statement

  237 declaration_list: declaration
  238                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 1 9 10 112 114 130 132 133 136 137 144 170 171 199
    206 226
CONSTANT (259) 2
STRING_LITERAL (260) 3
PTR_OP (261) 10
INC_OP (262) 11 18
DEC_OP (263) 12 19
LEFT_OP (264) 39
RIGHT_OP (265) 40
LE_OP (266) 44
GE_OP (267) 45
EQ_OP (268) 47
NE_OP (269) 48
SEMI_OP (270) 77 78 119 215 216 221 226 227 228 229 230
OCURLY_OP (271) 13 14 112 113 129 130 131 132 189 190 209 210
CCURLY_OP (272) 13 14 112 113 129 130 131 132 189 190 209 210
COMMA_OP (273) 14 16 75 88 125 131 132 135 164 166 171 190 193 194
COLON_OP (274) 60 127 128 206 207 208
EQUAL_OP (275) 63 90 137 195
OPENPAREN_OP (276) 4 7 8 13 14 22 30 145 154 155 156 177 184 185 186
    187 217 218 219 220 221 222 223 224 225
CLOSEPAREN_OP (277) 4 7 8 13 14 22 30 145 154 155 156 177 184 185 186
    187 217 218 219 220 221 222 223 224 225
OPENBRACE_OP (278) 6 146 147 148 149 150 151 152 153 178 179 180 181
    182 183 198
CLOSEBRACE_OP (279) 6 146 147 148 149 150 151 152 153 178 179 180 181
    182 183 198
PERIOD_OP (280) 9 199
NOT_OP (281) 28
LESS_OP (282) 42
GREATER_OP (283) 43
TILDE_OP (284) 27
XOR_OP (285) 52
QUESTION_OP (286) 60
AND_OP (287) 56
OR_OP (288) 58
MUL_ASSIGN (289) 64
DIV_ASSIGN (290) 65
MOD_ASSIGN (291) 66
ADD_ASSIGN (292) 67
SUB_ASSIGN (293) 68
LEFT_ASSIGN (294) 69
RIGHT_ASSIGN (295) 70
AND_ASSIGN (296) 71
XOR_ASSIGN (297) 72
OR_ASSIGN (298) 73
TYPE_NAME (299) 111
PLUS_OP (300) 25 36
MINUS_OP (301) 26 37
TIMES_OP (302) 24 32 151 152 157 158 159 160 182 183
DIV_OP (303) 33
MOD_OP (304) 34
BIT_OR (305) 54
BIT_AND (306) 23 50
TYPEDEF (307) 91
EXTERN (308) 92
STATIC (309) 93 149 150
AUTO (310) 94
REGISTER (311) 95
INLINE (312) 141
RESTRICT (313) 139
CHAR (314) 97
SHORT (315) 98
INT (316) 99
LONG (317) 100
LONGLONG (318) 101
SIGNED (319) 104
UNSIGNED (320) 105
FLOAT (321) 102
DOUBLE (322) 103
CONST (323) 138
VOLATILE (324) 140
VOID (325) 96
SIZEOF (326) 21 22
BOOL (327) 106
COMPLEX (328) 107
IMAGINARY (329) 108
STRUCT (330) 115
UNION (331) 116
ENUM (332) 129 130 131 132 133
ELLIPSIS (333) 164
CASE (334) 207
DEFAULT (335) 208
IF (336) 217 218
ELSE (337) 218
SWITCH (338) 219
WHILE (339) 220 221
DO (340) 221
FOR (341) 222 223 224 225
GOTO (342) 226
CONTINUE (343) 227
BREAK (344) 228
RETURN (345) 229 230


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
primary_expression (92)
    on left: 1 2 3 4, on right: 5
postfix_expression (93)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 6 7 8 9 10 11 12 17
argument_expression_list (94)
    on left: 15 16, on right: 8 16
unary_expression (95)
    on left: 17 18 19 20 21 22, on right: 18 19 21 29 62
unary_operator (96)
    on left: 23 24 25 26 27 28, on right: 20
cast_expression (97)
    on left: 29 30, on right: 20 30 31 32 33 34
multiplicative_expression (98)
    on left: 31 32 33 34, on right: 32 33 34 35 36 37
additive_expression (99)
    on left: 35 36 37, on right: 36 37 38 39 40
shift_expression (100)
    on left: 38 39 40, on right: 39 40 41 42 43 44 45
relational_expression (101)
    on left: 41 42 43 44 45, on right: 42 43 44 45 46 47 48
equality_expression (102)
    on left: 46 47 48, on right: 47 48 49 50
and_expression (103)
    on left: 49 50, on right: 50 51 52
exclusive_or_expression (104)
    on left: 51 52, on right: 52 53 54
inclusive_or_expression (105)
    on left: 53 54, on right: 54 55 56
logical_and_expression (106)
    on left: 55 56, on right: 56 57 58
logical_or_expression (107)
    on left: 57 58, on right: 58 59 60
conditional_expression (108)
    on left: 59 60, on right: 60 61 76
assignment_expression (109)
    on left: 61 62, on right: 15 16 62 74 75 146 148 149 150 179 181
    188
assignment_operator (110)
    on left: 63 64 65 66 67 68 69 70 71 72 73, on right: 62
expression (111)
    on left: 74 75, on right: 4 6 60 75 216 217 218 219 220 221 223
    225 230
constant_expression (112)
    on left: 76, on right: 127 128 137 198 207
declaration (113)
    on left: 77 78, on right: 213 224 225 234 237 238
declaration_specifiers (114)
    on left: 79 80 81 82 83 84 85 86, on right: 77 78 80 82 84 86 167
    168 169 235 236
init_declarator_list (115)
    on left: 87 88, on right: 78 88
init_declarator (116)
    on left: 89 90, on right: 87 88
storage_class_specifier (117)
    on left: 91 92 93 94 95, on right: 79 80
type_specifier (118)
    on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110
    111, on right: 81 82 120 121
struct_or_union_specifier (119)
    on left: 112 113 114, on right: 109
struct_or_union (120)
    on left: 115 116, on right: 112 113 114
struct_declaration_list (121)
    on left: 117 118, on right: 112 113 118
struct_declaration (122)
    on left: 119, on right: 117 118
specifier_qualifier_list (123)
    on left: 120 121 122 123, on right: 119 120 122 172 173
struct_declarator_list (124)
    on left: 124 125, on right: 119 125
struct_declarator (125)
    on left: 126 127 128, on right: 124 125
enum_specifier (126)
    on left: 129 130 131 132 133, on right: 110
enumerator_list (127)
    on left: 134 135, on right: 129 130 131 132 135
enumerator (128)
    on left: 136 137, on right: 134 135
type_qualifier (129)
    on left: 138 139 140, on right: 83 84 122 123 161 162
function_specifier (130)
    on left: 141, on right: 85 86
declarator (131)
    on left: 142 143, on right: 89 90 126 128 145 167 235 236
direct_declarator (132)
    on left: 144 145 146 147 148 149 150 151 152 153 154 155 156, on right:
    142 143 146 147 148 149 150 151 152 153 154 155 156
pointer (133)
    on left: 157 158 159 160, on right: 142 159 160 174 176
type_qualifier_list (134)
    on left: 161 162, on right: 146 147 149 150 151 158 160 162
parameter_type_list (135)
    on left: 163 164, on right: 154 185 187
parameter_list (136)
    on left: 165 166, on right: 163 164 166
parameter_declaration (137)
    on left: 167 168 169, on right: 165 166
identifier_list (138)
    on left: 170 171, on right: 155 171
type_name (139)
    on left: 172 173, on right: 13 14 22 30
abstract_declarator (140)
    on left: 174 175 176, on right: 168 173 177
direct_abstract_declarator (141)
    on left: 177 178 179 180 181 182 183 184 185 186 187, on right:
    175 176 180 181 183 186 187
initializer (142)
    on left: 188 189 190, on right: 90 191 192 193 194
initializer_list (143)
    on left: 191 192 193 194, on right: 13 14 189 190 193 194
designation (144)
    on left: 195, on right: 192 194
designator_list (145)
    on left: 196 197, on right: 195 197
designator (146)
    on left: 198 199, on right: 196 197
statement (147)
    on left: 200 201 202 203 204 205, on right: 206 207 208 214 217
    218 219 220 221 222 223 224 225
labeled_statement (148)
    on left: 206 207 208, on right: 200
compound_statement (149)
    on left: 209 210, on right: 201 235 236
block_item_list (150)
    on left: 211 212, on right: 210 212
block_item (151)
    on left: 213 214, on right: 211 212
expression_statement (152)
    on left: 215 216, on right: 202 222 223 224 225
selection_statement (153)
    on left: 217 218 219, on right: 203
iteration_statement (154)
    on left: 220 221 222 223 224 225, on right: 204
jump_statement (155)
    on left: 226 227 228 229 230, on right: 205
translation_unit (156)
    on left: 231 232, on right: 0 232
external_declaration (157)
    on left: 233 234, on right: 231 232
function_definition (158)
    on left: 235 236, on right: 233
declaration_list (159)
    on left: 237 238, on right: 235 238


State 0

    0 $accept: . translation_unit $end

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26

    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35
    translation_unit           go to state 36
    external_declaration       go to state 37
    function_definition        go to state 38


State 1

  111 type_specifier: TYPE_NAME .

    $default  reduce using rule 111 (type_specifier)


State 2

   91 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 91 (storage_class_specifier)


State 3

   92 storage_class_specifier: EXTERN .

    $default  reduce using rule 92 (storage_class_specifier)


State 4

   93 storage_class_specifier: STATIC .

    $default  reduce using rule 93 (storage_class_specifier)


State 5

   94 storage_class_specifier: AUTO .

    $default  reduce using rule 94 (storage_class_specifier)


State 6

   95 storage_class_specifier: REGISTER .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  141 function_specifier: INLINE .

    $default  reduce using rule 141 (function_specifier)


State 8

  139 type_qualifier: RESTRICT .

    $default  reduce using rule 139 (type_qualifier)


State 9

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 10

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 11

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 13

  101 type_specifier: LONGLONG .

    $default  reduce using rule 101 (type_specifier)


State 14

  104 type_specifier: SIGNED .

    $default  reduce using rule 104 (type_specifier)


State 15

  105 type_specifier: UNSIGNED .

    $default  reduce using rule 105 (type_specifier)


State 16

  102 type_specifier: FLOAT .

    $default  reduce using rule 102 (type_specifier)


State 17

  103 type_specifier: DOUBLE .

    $default  reduce using rule 103 (type_specifier)


State 18

  138 type_qualifier: CONST .

    $default  reduce using rule 138 (type_qualifier)


State 19

  140 type_qualifier: VOLATILE .

    $default  reduce using rule 140 (type_qualifier)


State 20

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 21

  106 type_specifier: BOOL .

    $default  reduce using rule 106 (type_specifier)


State 22

  107 type_specifier: COMPLEX .

    $default  reduce using rule 107 (type_specifier)


State 23

  108 type_specifier: IMAGINARY .

    $default  reduce using rule 108 (type_specifier)


State 24

  115 struct_or_union: STRUCT .

    $default  reduce using rule 115 (struct_or_union)


State 25

  116 struct_or_union: UNION .

    $default  reduce using rule 116 (struct_or_union)


State 26

  129 enum_specifier: ENUM . OCURLY_OP enumerator_list CCURLY_OP
  130               | ENUM . IDENTIFIER OCURLY_OP enumerator_list CCURLY_OP
  131               | ENUM . OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  132               | ENUM . IDENTIFIER OCURLY_OP enumerator_list COMMA_OP CCURLY_OP
  133               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 39
    OCURLY_OP   shift, and go to state 40


State 27

  234 external_declaration: declaration .

    $default  reduce using rule 234 (external_declaration)


State 28

   77 declaration: declaration_specifiers . SEMI_OP
   78            | declaration_specifiers . init_declarator_list SEMI_OP
  235 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  236                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER    shift, and go to state 41
    SEMI_OP       shift, and go to state 42
    OPENPAREN_OP  shift, and go to state 43
    TIMES_OP      shift, and go to state 44

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 48
    pointer               go to state 49


State 29

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35


State 30

   81 declaration_specifiers: type_specifier .
   82                       | type_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 51
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35


State 31

  109 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 109 (type_specifier)


State 32

  112 struct_or_union_specifier: struct_or_union . IDENTIFIER OCURLY_OP struct_declaration_list CCURLY_OP
  113                          | struct_or_union . OCURLY_OP struct_declaration_list CCURLY_OP
  114                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 52
    OCURLY_OP   shift, and go to state 53


State 33

  110 type_specifier: enum_specifier .

    $default  reduce using rule 110 (type_specifier)


State 34

   83 declaration_specifiers: type_qualifier .
   84                       | type_qualifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26

    $default  reduce using rule 83 (declaration_specifiers)

    declaration_specifiers     go to state 54
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35


State 35

   85 declaration_specifiers: function_specifier .
   86                       | function_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26

    $default  reduce using rule 85 (declaration_specifiers)

    declaration_specifiers     go to state 55
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    struct_or_union_specifier  go to state 31
    struct_or_union            go to state 32
    enum_specifier             go to state 33
    type_qualifier             go to state 34
    function_specifier         go to state 35


State 36

    0 $accept: translation_unit . $end
  232 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 56
    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    LONGLONG   shift, and go to state 13
    SIGNED     shift, and go to state 14
    UNSIGNED   shift, and go to state 15
    FLOAT      shift, and go to state 16
    DOUBLE     shift, and go to state 17
    CONST      shift, and go to state 18
    VOLATILE   shift, and go to state 19
    VOID       shift, and go to state 20
    BOOL       shift, and go to state 21
    COMPLEX    shift, and go to state 22
    IMAGINARY  shift, and go to state 23
    STRUCT     shift, and go to state 24
    UNION      shift, and go to state 25
    ENUM       shift, and go to state 26
